--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -209,7 +209,7 @@
                         </h4>
                         <p>날짜:<%= @one_sports.date %><br>
                         장소:<%= @one_sports.site %><br>
-                        글쓴이 : <%= @one_sports.name %>  </p>
+                        글쓴이 : <%= @one_sports.name %>  </p><%= @one_sports.id %>
             </div>
        
         
